# learning2usecase1

./: 101.ipynb  Python 101.ipynb  README.md  app.py  main.py  pyproject.toml  run.py
templates/: index.html
